solve creator page

--- a/Frontend/nginx.conf
+++ b/Frontend/nginx.conf
@@ -1,21 +1,12 @@
 server {
     listen 80;
+    server_name localhost;
 
+    # Configura la root per i file statici (quelli che verranno copiati nella build)
     location / {
-        root   /usr/share/nginx/html;  # Percorso ai file costruiti
-        index  index.html index.htm;
-        try_files $uri $uri/ /index.html;  # Gestisce il routing di React
-    }
-
-    error_page 404 /index.html;  # In caso di errore 404, servire index.html
-    location = / {
         root /usr/share/nginx/html;
-        internal;
-    }
-
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html;
     }
 }
 
